cov/tests/test262/test/language/identifiers/start-unicode-6.1.0/code.js
"use strict";
// Copyright (C) 2017 Ecma International.  All rights reserved.
// This code is governed by the BSD license found in the LICENSE file.
/*---
description: |
    Collection of assertion functions used throughout test262
defines: [assert]
---*/


function assert(mustBeTrue, message) {
  if (mustBeTrue === true) {
    return;
  }

  if (message === undefined) {
    message = 'Expected true but got ' + assert._toString(mustBeTrue);
  }
  throw new Test262Error(message);
}

assert._isSameValue = function (a, b) {
  if (a === b) {
    // Handle +/-0 vs. -/+0
    return a !== 0 || 1 / a === 1 / b;
  }

  // Handle NaN vs. NaN
  return a !== a && b !== b;
};

assert.sameValue = function (actual, expected, message) {
  try {
    if (assert._isSameValue(actual, expected)) {
      return;
    }
  } catch (error) {
    throw new Test262Error(message + ' (_isSameValue operation threw) ' + error);
    return;
  }

  if (message === undefined) {
    message = '';
  } else {
    message += ' ';
  }

  message += 'Expected SameValue(Â«' + assert._toString(actual) + 'Â», Â«' + assert._toString(expected) + 'Â») to be true';

  throw new Test262Error(message);
};

assert.notSameValue = function (actual, unexpected, message) {
  if (!assert._isSameValue(actual, unexpected)) {
    return;
  }

  if (message === undefined) {
    message = '';
  } else {
    message += ' ';
  }

  message += 'Expected SameValue(Â«' + assert._toString(actual) + 'Â», Â«' + assert._toString(unexpected) + 'Â») to be false';

  throw new Test262Error(message);
};

assert.throws = function (expectedErrorConstructor, func, message) {
  var expectedName, actualName;
  if (typeof func !== "function") {
    throw new Test262Error('assert.throws requires two arguments: the error constructor ' +
      'and a function to run');
    return;
  }
  if (message === undefined) {
    message = '';
  } else {
    message += ' ';
  }

  try {
    func();
  } catch (thrown) {
    if (typeof thrown !== 'object' || thrown === null) {
      message += 'Thrown value was not an object!';
      throw new Test262Error(message);
    } else if (thrown.constructor !== expectedErrorConstructor) {
      expectedName = expectedErrorConstructor.name;
      actualName = thrown.constructor.name;
      if (expectedName === actualName) {
        message += 'Expected a ' + expectedName + ' but got a different error constructor with the same name';
      } else {
        message += 'Expected a ' + expectedName + ' but got a ' + actualName;
      }
      throw new Test262Error(message);
    }
    return;
  }

  message += 'Expected a ' + expectedErrorConstructor.name + ' to be thrown but no exception was thrown at all';
  throw new Test262Error(message);
};

assert._toString = function (value) {
  try {
    if (value === 0 && 1 / value === -Infinity) {
      return '-0';
    }

    return String(value);
  } catch (err) {
    if (err.name === 'TypeError') {
      return Object.prototype.toString.call(value);
    }

    throw err;
  }
};

// Copyright (c) 2012 Ecma International.  All rights reserved.
// This code is governed by the BSD license found in the LICENSE file.
/*---
description: |
    Provides both:

    - An error class to avoid false positives when testing for thrown exceptions
    - A function to explicitly throw an exception using the Test262Error class
defines: [Test262Error, $DONOTEVALUATE]
---*/


function Test262Error(message) {
  this.message = message || "";
}

Test262Error.prototype.toString = function () {
  return "Test262Error: " + this.message;
};

Test262Error.thrower = (message) => {
  throw new Test262Error(message);
};

function $DONOTEVALUATE() {
  throw "Test262: This statement should not be evaluated.";
}

// Copyright 2022 Mathias Bynens. All rights reserved.
// This code is governed by the BSD license found in the LICENSE file.

/*---
author: Mathias Bynens
esid: sec-names-and-keywords
description: |
  Test that Unicode v6.1.0 ID_Start characters are accepted as
  identifier start characters.
info: |
  Generated by https://github.com/mathiasbynens/caniunicode
---*/

var à¢ à¢¢à¢£à¢¤à¢¥à¢¦à¢§à¢¨à¢©à¢ªà¢«à¢¬à»à»Ÿáƒ‡áƒáƒ½áƒ¾áƒ¿á®ºá®»á®¼á®½á®¾á®¿á³µá³¶â³²â³³â´§â´­âµ¦âµ§é¿Œê’ê“êªêŸ¸êŸ¹ê« ê«¡ê«¢ê«£ê«¤ê«¥ê«¦ê«§ê«¨ê«©ê«ªê«²ê«³ê«´ï¨®ï¨¯ğ¦€ğ¦ğ¦‚ğ¦ƒğ¦„ğ¦…ğ¦†ğ¦‡ğ¦ˆğ¦‰ğ¦Šğ¦‹ğ¦Œğ¦ğ¦ğ¦ğ¦ğ¦‘ğ¦’ğ¦“ğ¦”ğ¦•ğ¦–ğ¦—ğ¦˜ğ¦™ğ¦šğ¦›ğ¦œğ¦ğ¦ğ¦Ÿğ¦ ğ¦¡ğ¦¢ğ¦£ğ¦¤ğ¦¥ğ¦¦ğ¦§ğ¦¨ğ¦©ğ¦ªğ¦«ğ¦¬ğ¦­ğ¦®ğ¦¯ğ¦°ğ¦±ğ¦²ğ¦³ğ¦´ğ¦µğ¦¶ğ¦·ğ¦¾ğ¦¿ğ‘ƒğ‘ƒ‘ğ‘ƒ’ğ‘ƒ“ğ‘ƒ”ğ‘ƒ•ğ‘ƒ–ğ‘ƒ—ğ‘ƒ˜ğ‘ƒ™ğ‘ƒšğ‘ƒ›ğ‘ƒœğ‘ƒğ‘ƒğ‘ƒŸğ‘ƒ ğ‘ƒ¡ğ‘ƒ¢ğ‘ƒ£ğ‘ƒ¤ğ‘ƒ¥ğ‘ƒ¦ğ‘ƒ§ğ‘ƒ¨ğ‘„ƒğ‘„„ğ‘„…ğ‘„†ğ‘„‡ğ‘„ˆğ‘„‰ğ‘„Šğ‘„‹ğ‘„Œğ‘„ğ‘„ğ‘„ğ‘„ğ‘„‘ğ‘„’ğ‘„“ğ‘„”ğ‘„•ğ‘„–ğ‘„—ğ‘„˜ğ‘„™ğ‘„šğ‘„›ğ‘„œğ‘„ğ‘„ğ‘„Ÿğ‘„ ğ‘„¡ğ‘„¢ğ‘„£ğ‘„¤ğ‘„¥ğ‘„¦ğ‘†ƒğ‘†„ğ‘†…ğ‘††ğ‘†‡ğ‘†ˆğ‘†‰ğ‘†Šğ‘†‹ğ‘†Œğ‘†ğ‘†ğ‘†ğ‘†ğ‘†‘ğ‘†’ğ‘†“ğ‘†”ğ‘†•ğ‘†–ğ‘†—ğ‘†˜ğ‘†™ğ‘†šğ‘†›ğ‘†œğ‘†ğ‘†ğ‘†Ÿğ‘† ğ‘†¡ğ‘†¢ğ‘†£ğ‘†¤ğ‘†¥ğ‘†¦ğ‘†§ğ‘†¨ğ‘†©ğ‘†ªğ‘†«ğ‘†¬ğ‘†­ğ‘†®ğ‘†¯ğ‘†°ğ‘†±ğ‘†²ğ‘‡ğ‘‡‚ğ‘‡ƒğ‘‡„ğ‘š€ğ‘šğ‘š‚ğ‘šƒğ‘š„ğ‘š…ğ‘š†ğ‘š‡ğ‘šˆğ‘š‰ğ‘šŠğ‘š‹ğ‘šŒğ‘šğ‘šğ‘šğ‘šğ‘š‘ğ‘š’ğ‘š“ğ‘š”ğ‘š•ğ‘š–ğ‘š—ğ‘š˜ğ‘š™ğ‘ššğ‘š›ğ‘šœğ‘šğ‘šğ‘šŸğ‘š ğ‘š¡ğ‘š¢ğ‘š£ğ‘š¤ğ‘š¥ğ‘š¦ğ‘š§ğ‘š¨ğ‘š©ğ‘šªğ–¼€ğ–¼ğ–¼‚ğ–¼ƒğ–¼„ğ–¼…ğ–¼†ğ–¼‡ğ–¼ˆğ–¼‰ğ–¼Šğ–¼‹ğ–¼Œğ–¼ğ–¼ğ–¼ğ–¼ğ–¼‘ğ–¼’ğ–¼“ğ–¼”ğ–¼•ğ–¼–ğ–¼—ğ–¼˜ğ–¼™ğ–¼šğ–¼›ğ–¼œğ–¼ğ–¼ğ–¼Ÿğ–¼ ğ–¼¡ğ–¼¢ğ–¼£ğ–¼¤ğ–¼¥ğ–¼¦ğ–¼§ğ–¼¨ğ–¼©ğ–¼ªğ–¼«ğ–¼¬ğ–¼­ğ–¼®ğ–¼¯ğ–¼°ğ–¼±ğ–¼²ğ–¼³ğ–¼´ğ–¼µğ–¼¶ğ–¼·ğ–¼¸ğ–¼¹ğ–¼ºğ–¼»ğ–¼¼ğ–¼½ğ–¼¾ğ–¼¿ğ–½€ğ–½ğ–½‚ğ–½ƒğ–½„ğ–½ğ–¾“ğ–¾”ğ–¾•ğ–¾–ğ–¾—ğ–¾˜ğ–¾™ğ–¾šğ–¾›ğ–¾œğ–¾ğ–¾ğ–¾Ÿğ¸€ğ¸ğ¸‚ğ¸ƒğ¸…ğ¸†ğ¸‡ğ¸ˆğ¸‰ğ¸Šğ¸‹ğ¸Œğ¸ğ¸ğ¸ğ¸ğ¸‘ğ¸’ğ¸“ğ¸”ğ¸•ğ¸–ğ¸—ğ¸˜ğ¸™ğ¸šğ¸›ğ¸œğ¸ğ¸ğ¸Ÿğ¸¡ğ¸¢ğ¸¤ğ¸§ğ¸©ğ¸ªğ¸«ğ¸¬ğ¸­ğ¸®ğ¸¯ğ¸°ğ¸±ğ¸²ğ¸´ğ¸µğ¸¶ğ¸·ğ¸¹ğ¸»ğ¹‚ğ¹‡ğ¹‰ğ¹‹ğ¹ğ¹ğ¹ğ¹‘ğ¹’ğ¹”ğ¹—ğ¹™ğ¹›ğ¹ğ¹Ÿğ¹¡ğ¹¢ğ¹¤ğ¹§ğ¹¨ğ¹©ğ¹ªğ¹¬ğ¹­ğ¹®ğ¹¯ğ¹°ğ¹±ğ¹²ğ¹´ğ¹µğ¹¶ğ¹·ğ¹¹ğ¹ºğ¹»ğ¹¼ğ¹¾ğº€ğºğº‚ğºƒğº„ğº…ğº†ğº‡ğºˆğº‰ğº‹ğºŒğºğºğºğºğº‘ğº’ğº“ğº”ğº•ğº–ğº—ğº˜ğº™ğºšğº›ğº¡ğº¢ğº£ğº¥ğº¦ğº§ğº¨ğº©ğº«ğº¬ğº­ğº®ğº¯ğº°ğº±ğº²ğº³ğº´ğºµğº¶ğº·ğº¸ğº¹ğººğº»;

